# bug

./: Cargo.toml  README.md
.claude/: settings.local.json
examples/: basic_usage.rs  handle_usage.rs  hyperlink_demo.rs  template_file_usage.rs
src/: lib.rs  url_encode.rs
templates/: crash_report.md  performance_issue.md
