[package]
name = "bug"
version = "0.3.0"
edition = "2024"
description = "A simple Rust library for printing an error in the event of a bug and allowing users to easily file a bug report via GitHub issues using bug templates."
license = "MIT"

[dependencies]
hashbrown = { version = "0.16.0", default-features = false }
rustc-hash = "2.1.1"
once_cell = { version = "1.19", optional = true }

[features]
default = ["std"]
std = ["once_cell"]
